--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,12 @@
       rel="stylesheet"
       type="text/css"
     />
+    <!-- Fontawesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <title>Janvi Mahajan</title>
   </head>
   <body>
